Improve URL class